// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders with image 1`] = `
<img
  alt="Sorry"
  className="Image"
  src="cateyes.jpg"
/>
`;

exports[`<Image /> renders without props 1`] = `
<img
  alt="Sorry"
  className="Image"
/>
`;
